# addon-mathcomp

./: Makefile  coq-mathcomp.json  dune  dune-project  mathcomp-fast-load.patch  package.json
dune-files/mathcomp/algebra/: dune
dune-files/mathcomp/all/: dune
dune-files/mathcomp/character/: dune
dune-files/mathcomp/field/: dune
dune-files/mathcomp/fingroup/: dune
dune-files/mathcomp/solvable/: dune
dune-files/mathcomp/ssreflect/: dune
