
(rule
 (targets coq-pkgs)
 (deps
  (package coq-mathcomp-ssreflect)
  (package coq-mathcomp-fingroup)
  (package coq-mathcomp-algebra)
  (package coq-mathcomp-solvable)
  (package coq-mathcomp-field)
  (package coq-mathcomp-character))
 (action
  (run wacoq build %{dep:coq-mathcomp.json})))

(alias
 (name all)
 (deps package.json))

(dirs workdir)
