
(rule
 (targets coq-pkgs)
 (deps
  (package coq-mathcomp-ssreflect)
  (package coq-mathcomp-fingroup)
  (package coq-mathcomp-algebra)
  (package coq-mathcomp-solvable)
  (package coq-mathcomp-field)
  (package coq-mathcomp-character)
  (:json jscoq-mathcomp.json))
 (action
  (run npx %{env:pkgtool=jscoq} build %{json})))

(alias
 (name all)
 (deps package.json))

(dirs workdir)
