(coq.theory
 (name mathcomp.algebra)
 (package coq-mathcomp-algebra)
 (modules :standard)
 (synopsis "Mathematical Components")
 (theories mathcomp.ssreflect mathcomp.fingroup)
 (flags
   -w -notation-overridden
   -w -redundant-canonical-projection
   -w -projection-no-head-constant
   -w -undeclared-scope
   -w -set-maximal-deprecated
   -w -ambiguous-paths
   -w -duplicate-clear
   -w -notation-incompatible-format
   -w -irrelevant-format-only-parsing
   -w -irrelevant-reserved-notation-only-parsing
   -w -deprecated-hint-constr
   -w -deprecated-hint-without-locality
 ))
