(coq.theory
 (name mathcomp.field)
 (package coq-mathcomp-field)
 (modules :standard)
 (synopsis "Mathematical Components")
 (theories mathcomp.ssreflect mathcomp.fingroup mathcomp.algebra mathcomp.solvable)
 (flags
   -w -notation-overridden
   -w -redundant-canonical-projection
   -w -projection-no-head-constant
   -w -undeclared-scope
   -w -set-maximal-deprecated
   -w -ambiguous-paths
   -w -duplicate-clear
   -w -notation-incompatible-format
   -w -deprecated-hint-constr
   -w -deprecated-hint-without-locality
 ))
