(coq.theory
 (name mathcomp.ssreflect)
 (package coq-mathcomp-ssreflect)
 (modules :standard)
 (synopsis "Mathematical Components")
 (flags
   -w -notation-overridden
   -w -redundant-canonical-projection
   -w -projection-no-head-constant
   -w -undeclared-scope
   -w -set-maximal-deprecated
   -w -ambiguous-paths
   -w -duplicate-clear
   -w -irrelevant-reserved-notation-only-parsing
   -w -irrelevant-format-only-parsing
   -w -deprecated-hint-constr
 ))
