(coq.theory
 (name mathcomp.ssreflect)
 (package coq-mathcomp-ssreflect)
 (modules :standard)
 (synopsis "Mathematical Components")
 (flags
   -w -notation-overridden
   -w -redundant-canonical-projection
   -w -projection-no-head-constant
   -w -undeclared-scope
   -w -set-maximal-deprecated
   -w -ambiguous-paths
   -w -duplicate-clear
   -w -non-reversible-notation
   -w -notation-incompatible-format
   -w -deprecated-hint-constr
 ))
